new: show other player info, status-tab & info-popups

--- a/static/style.css
+++ b/static/style.css
@@ -551,6 +551,11 @@ span {
   margin-right: 9px;
 }
 
+.playerlistPic:hover {
+  opacity: 0.6;
+  cursor: pointer;
+}
+
 .playerlistPicGray {
   -webkit-filter: grayscale(1);
   filter: grayscale(1);
